tests/ui/sk-field-wrong-sort.stderr
error: field 'name' cannot be used as sort key as struct contains field named 'sk' which must be used
  --> tests/./ui/sk-field-wrong-sort.rs:8:5
   |
8  | /     #[cryptonamo(query = "prefix", compound = "email#name")]
9  | |     #[sort_key]
10 | |     name: String,
   | |________________^
